<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/id_imageview_movies_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/movies"
        android:src="@drawable/movies" />

    <RelativeLayout
        android:id="@+id/id_relativelayout_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_imageview_movies_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" >

        <EditText
            android:id="@+id/id_edittext_account"
            android:layout_width="255dp"
            android:layout_height="46dp"
            android:background="@drawable/input_bg"
            android:hint="@string/account_hint"
            android:paddingLeft="40dp"
            android:textColorHint="#ffffff"
            android:textSize="13sp"
            android:textStyle="italic"
            android:maxLength="30" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:contentDescription="@string/shouji_icon"
            android:src="@drawable/shouji_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_relativelayout_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_relativelayout_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" >

        <EditText
            android:id="@+id/id_edittext_pwd"
            android:layout_width="255dp"
            android:layout_height="46dp"
            android:background="@drawable/input_bg"
            android:hint="@string/pwd_hint"
            android:paddingLeft="40dp"
            android:textColorHint="#ffffff"
            android:textSize="13sp"
            android:textStyle="italic"
            android:inputType="textPassword"
            android:maxLength="20" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9dp"
            android:contentDescription="@string/shouji_icon"
            android:src="@drawable/suo_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/id_relativelayout_registe_forget_pwd"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_relativelayout_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/id_textview_registe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/registe_text"
            android:textColor="#35badd"
            android:textSize="12sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/id_textview_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forget_pwd_text"
            android:textColor="#35badd"
            android:textSize="12sp"
            android:typeface="serif" />
    </RelativeLayout>

    <Button
        android:id="@+id/id_button_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/id_relativelayout_registe_forget_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login_btn_text"
        android:textColor="#fff" />

</RelativeLayout>